--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <style>
-            .custom-navbar {
+            .custom-background {
                 background-color: #5233FF !important;
             }
             body {
@@ -17,8 +17,9 @@
         </style>
     </head>
     <body>
-        <header>
-            <nav class="navbar navbar-expand-lg custom-navbar">
+        <header class=" sticky-top">
+            <div class="container-fluid custom-background">
+            <nav class="navbar navbar-expand-lg">
                 <a class="navbar-brand text-white" href="#">Tutoring With Claire</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -37,18 +38,41 @@
                     </ul>
                 </div>
             </nav>
+            </div>
         </header>
+
         <main>
-            <section class="container">
-                <div class="row">
-                    <div class="col">
-                        <h1>Welcome to Tutoring With Claire</h1>
-                        <p>Our mission is to help students achieve their academic goals by providing personalized tutoring services.</p>
+            <section>
+                <div
+                    class="bg-image d-flex justify-content-center align-items-center"
+                    style="
+                        background-image: url('./img/tutoring_kid.jpg');
+                        background-repeat: no-repeat;
+                        background-size: cover;
+                        height: 100vh;
+                    "
+                >
+                    <div class="bg-image vstack justify-content-center align-items-center"
+                        style="
+                            height: 100%;
+                            width: 50%;
+                            background: rgb(0,0,0);
+                            background: radial-gradient(rgba(255,255,255,1) 0%, rgba(0,0,0,0) 80%);
+                            ">
+                        <h1 style="font-size: 3rem;">Set your children for a better future</h1>
+                        <a class="btn btn-danger" href="#">BOOK NOW</a>
                     </div>
                 </div>
             </section>
+            <section>
+
+            </section>
+            <section>
+                
+            </section>
         </main>
-        <footer>
+
+        <footer class="custom-background text-white">
             <section class="container">
                 <div class="row">
                     <div class="col">
