--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
         <header class=" sticky-top">
             <div class="container-fluid custom-background">
             <nav class="navbar navbar-expand-lg">
-                <a class="navbar-brand text-white" href="#">Tutoring With Claire</a>
+                <a class="navbar-brand text-white" href="#home">Tutoring With Claire</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="ms-auto" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link text-white" aria-current="page" href="#">Services</a>
+                            <a class="nav-link text-white" aria-current="page" href="#services">Services</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" aria-current="page" href="#">Contanct Me</a>
+                            <a class="nav-link text-white" aria-current="page" href="#contact">Contanct Me</a>
                         </li>
                         <li class="nav-item">
                             <a class="btn btn-danger" href="#">BOOK</a>
@@ -42,7 +42,7 @@
         </header>
 
         <main>
-            <section>
+            <section id="home">
                 <div
                     class="bg-image d-flex justify-content-center align-items-center"
                     style="
@@ -60,14 +60,48 @@
                             background: radial-gradient(rgba(255,255,255,1) 0%, rgba(0,0,0,0) 80%);
                             ">
                         <h1 style="font-size: 3rem;">Set your children for a better future</h1>
-                        <a class="btn btn-danger" href="#">BOOK NOW</a>
+                        <a class="btn btn-danger" style="font-size: 1.5rem;" href="#">BOOK NOW</a>
                     </div>
                 </div>
             </section>
-            <section>
 
+            <section class="container-fluid" id="services" style="width: 80%;">
+                <br>
+                <div class="row align-items-center text-center">
+                    <div class="col">
+                        <img src="./img/claire.png" alt="Claire">
+                    </div>
+                    <div class="col-8">
+                        <h1>Hello I'm Claire</h1>
+                        <h2>I’m an expert in</h2>
+                        <div class="row">
+                            <h1 class="col btn custom-background text-white" style="font-size: 2rem; width: 40%;">Math</h1>
+                            <div class="col-1"></div>
+                            <h1 class="col btn custom-background text-white" style="font-size: 2rem; width: 40%;">Computer Science</h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="row align-items-center text-center">
+                    <h2>I help kids from middle school to high school get better grades</h2>
+                    <p>My tutoring sessions are designed to help your child understand the subject and get better grades. I have a proven track record of helping kids get better grades and understand the subject.</p>
+                </div>
+                <div class="row align-items-center text-center">
+                    <div class="col">
+                        <h1 style="color: green;"> $25/h rate</h1>
+                    </div>
+                    <div class="col">
+                        <img src="./img/Star.png" alt="Star">
+                        <img src="./img/Star.png" alt="Star">
+                        <img src="./img/Star.png" alt="Star">
+                        <img src="./img/Star.png" alt="Star">
+                        <img src="./img/Star.png" alt="Star">
+                    </div>
+                </div>
+                <div>
+                </div>
             </section>
-            <section>
+
+            <section id="contact">
                 
             </section>
         </main>
