--- a/book.html
+++ b/book.html
@@ -8,6 +8,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
         <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+        <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
         <style>
             .custom-background {
                 background-color: #5233FF !important;
@@ -23,6 +25,20 @@
 
             .card-color {
                 background-color: #D9D9D9;
+            }
+
+            /* Make the calendar scale with the container */
+            .flatpickr-calendar {
+                transform: scale(1.4); /* Adjust scaling */
+            }
+
+            .calendar-container{
+                width: 100%; /* Full width */
+                max-width: 400px; /* Adjust size */
+                height: 500px; /* Adjust height */
+                display: flex;
+                justify-content: center; /* Center horizontally */
+                align-items: center; /* Center vertically */
             }
         </style>
     </head>
@@ -52,7 +68,50 @@
         </header>
 
         <main>
-            
+            <section>
+                <div class="container">
+                    <div class="row">
+                        <div class="col">
+                            <h1 class="text-center">Book a Session</h1>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <form class="container">
+                    <div class="row">
+                        <div class="col"></div>
+                        <div class="col calendar-container">
+                            <div id="datepicker"></div>
+                        </div>
+                        <div class="col"></div>
+                    </div>
+                    
+                    <div class="row">
+                        <label for="name" class="form-label">Name</label>
+                        <input type="text" class="form-control" id="name" aria-describedby="nameHelp">
+                    </div>
+                    <div class="row">
+                        <label for="email" class="form-label">Email address</label>
+                        <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
+                    </div>
+                    <div class="row">
+                        <label for="message" class="form-label">Message</label>
+                        <textarea class="form-control" id="message" rows="3"></textarea>
+                        <div id="nameHelp" class="form-text">Tell me the child's name, grade, subject, and dificulties.</div>
+                    </div>
+                    <div class="row">
+                        <label for="address" class="form-label">Address</label>
+                        <input type="text" class="form-control" id="address" aria-describedby="addressHelp">
+                    </div>
+                    <div class="row">
+                        <label for="phone" class="form-label">Phone</label>
+                        <input type="text" class="form-control" id="phone" aria-describedby="phoneHelp">
+                    </div>
+                    <button type="submit" class="btn btn-danger" onclick="submitForm()">SUBMIT</button>
+                </form>
+            </section>
+            <br>
         </main>
 
         <footer class="custom-background text-white">
@@ -65,9 +124,23 @@
             </section>
         </footer>
 
-        <script>
-        </script>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <script>
+            flatpickr("#datepicker", {
+                inline: true,  // Keeps the calendar always visible
+                dateFormat: "Y-m-d",  // Customize date format
+                minDate: "today"  // Disable past dates
+            });
+
+            function submitForm() {
+                // clear form
+                document.getElementById("name").value = "";
+                document.getElementById("email").value = "";
+                document.getElementById("message").value = "";
+                window.location.href = "./index.html";
+                alert("Form submitted!");
+            }
+        </script>
     </body>
 </html>
