--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                 <div class="ms-auto" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
+                            <a class="nav-link text-white" aria-current="page" href="#home">Home</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-white" aria-current="page" href="#services">Services</a>
                         </li>
                         <li class="nav-item">
@@ -107,6 +110,7 @@
                         <img src="./img/Star.png" alt="Star">
                     </div>
                 </div>
+
                 <div class="row align-items-center text-center">
                     <div class="col-3"></div>
                     <div id="carouselExampleControls" class="carousel slide col" data-bs-ride="carousel">
@@ -147,6 +151,31 @@
                     </div>
                     <div class="col-3"></div>
                 </div>
+                <br>
+                <div class="row">
+                    <div class="col">
+                        <h1>Qualifications</h1>
+                        <ul>
+                            <li>Bachelors in Computer Science</li>
+                            <li>5 years of experience</li>
+                        </ul>
+                        <p>I have a degree in Computer Science and a strong background in math, science, and technology. With experience tutoring high school and middle school students, I specialize in breaking down complex concepts into simple, understandable lessons. My goal is to help students build confidence, improve their problem-solving skills, and achieve better academic results.</p>
+                    </div>
+                    <div class="col">
+                        <h1>Rate and Location</h1>
+                        <ul>
+                            <li>Rate: $25 per hour</li>
+                            <li>Location: I only offer sessions in the downtown area</li>
+                        </ul>
+                        <h3>If you or your child need extra support with schoolwork, I’d love to help!</h3>
+                    </div>
+                </div>
+                <br>
+                <div class="row align-items-center text-center">
+                    <h1>Book a session now!</h1>
+                    <a class="btn btn-danger" href="./book.html">BOOK NOW</a>
+                </div>
+                <br>
             </section>
 
             <section id="contact">
@@ -158,12 +187,10 @@
                                 <div class="mb-3">
                                     <label for="name" class="form-label">Name</label>
                                     <input type="text" class="form-control" id="name" aria-describedby="nameHelp">
-                                    <div id="nameHelp" class="form-text">We'll never share your name with anyone else.</div>
                                 </div>
                                 <div class="mb-3">
                                     <label for="email" class="form-label">Email address</label>
                                     <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
-                                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
                                 </div>
                                 <div class="mb-3">
                                     <label for="message" class="form-label">Message</label>
